--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <packaging>pom</packaging>
 
     <modules>
-<!--        <module>spring-boot-00-generator</module>-->
+        <module>spring-boot-00-generator</module>
 <!--        <module>spring-boot-01-aop</module>-->
 <!--        <module>spring-boot-02-properties</module>-->
 <!--        <module>spring-boot-03-exception</module>-->
