--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <modules>
         <module>spring-boot-00-generator</module>
-<!--        <module>spring-boot-01-aop</module>-->
+        <module>spring-boot-01-aop</module>
 <!--        <module>spring-boot-02-properties</module>-->
 <!--        <module>spring-boot-03-exception</module>-->
 <!--        <module>spring-boot-04-data-dynamic</module>-->
