--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
         <module>spring-boot-00-generator</module>
         <module>spring-boot-01-aop</module>
         <module>spring-boot-02-properties</module>
-<!--        <module>spring-boot-03-exception</module>-->
-<!--        <module>spring-boot-04-data-dynamic</module>-->
+        <module>spring-boot-03-exception</module>
+        <module>spring-boot-04-data-dynamic</module>
 <!--        <module>spring-boot-04-data-mybatis-plus</module>-->
 <!--        <module>spring-boot-05-cache-redis</module>-->
 <!--        <module>spring-boot-06-oauth2-security</module>-->
