--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <module>spring-boot-02-properties</module>
         <module>spring-boot-03-exception</module>
         <module>spring-boot-04-data-dynamic</module>
-<!--        <module>spring-boot-04-data-mybatis-plus</module>-->
+        <module>spring-boot-04-data-mybatis-plus</module>
 <!--        <module>spring-boot-05-cache-redis</module>-->
 <!--        <module>spring-boot-06-oauth2-security</module>-->
 <!--        <module>spring-boot-06-oauth2-security-jwt</module>-->
