--- a/spring-boot-00-generator/src/main/resources/application.yml
+++ b/spring-boot-00-generator/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     #MySQL配置
     driverClassName: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.11.136:3306/seata_order?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+    url: jdbc:mysql://192.168.11.136:3306/spring-boot-example?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     username: root
     password: 123456
     #oracle配置
@@ -43,6 +43,8 @@ pagehelper:
 
 
 #指定数据库，可选值有【mysql、oracle、sqlserver、postgresql】
-guli:
-  database: mysql
+example:
+  databaseType: mysql
+#  mybatisType: mybatis-plus
+  mybatisType: tk-mybatis
 
